--- a/Admin/adminEventReminder.html
+++ b/Admin/adminEventReminder.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/bd3ff9c68f.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
         <link rel="stylesheet" href="css/adminstyle.css">
         <title>Admin Dashboard</title>
     </head>
@@ -24,12 +25,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -55,7 +56,7 @@
                                 <li class="nav-item">
                                     <a href="adminBlog.html" class="nav-link text-white p-3 mb-2 sidebar-link">
                                         <i class="fas fa-clipboard-list text-light fa-lg mr-3"></i>
-                                        The Scolio Talk
+                                        The ScolioTalk
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -175,6 +176,8 @@
                                     <div class="row">
                                         <div class="col-md-8 editEmail">
                                             <div class="card mb-5">
+
+                                                <!--EMail Form-->
                                                 <h2 class="mt-3 ml-3 heading">Reminder Email</h2>
                                                 
                                                 <hr>
@@ -204,9 +207,13 @@
                                                         <input type="text" placeholder="Subject" id="subject" class="form-control subject" required>
                                                     </div>
 
-                                                    <div class="mb-3">
+                                                    <div class="mb-3 Message">
                                                         <label for="emailMessage" class="text-muted">Message</label>
-                                                        <textarea class="form-control" id="emailMessage" placeholder="Message" rows="6"></textarea>
+                                                        <div class="container-fluid editor ">
+                                                            <div id="emailMessage">
+                                                                
+                                                              </div>
+                                                        </div>
                                                     </div>
 
                                                     <div class="mb-3">
@@ -237,14 +244,16 @@
                                                         <input type="text" value="Add to google calendar" id="calendar" class="form-control subject" required>
                                                     </div>
 
-                                                    <div class="mb-3">
+                                                    <div class="mb-3 Message">
                                                         <label for="signature" class="text-muted">Signature</label>
-                                                        <textarea class="form-control" id="signature" placeholder="Message" rows="5">
-Kenya Scoliosis Foundation
-info@kenyascoliosisfoundation.com
-+254 712 345678
-www.kenyascoliosisfoundation.org
-                                                        </textarea>
+                                                        <div class="container-fluid editor">
+                                                            <div id="signature">
+                                                                <p>Kenya Scoliosis Foundation</p>
+                                                                <p>info@kenyascoliosisfoundation.org</p>
+                                                                <p>+254 701 234567</p>
+                                                                <a href="#">www.kenyascoliosisfoundation.org</a>
+                                                            </div>
+                                                        </div>
                                                     </div>
 
                                                     <button type="submit" class="btn btn-success mt-2 mb-3" onclick="">Save</button>
@@ -305,5 +314,17 @@ www.kenyascoliosisfoundation.org
     <script src="js/animation.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/functionality.js"></script>
     <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
+    <!-- Initialize Quill editor -->
+    <script>
+    var quill = new Quill('#emailMessage', {
+        theme: 'snow'
+    });
+
+    var quill = new Quill('#signature', {
+        theme: 'snow'
+    });
+    </script>
 
 </html>
