--- a/Admin/adminFinancesDonations.html
+++ b/Admin/adminFinancesDonations.html
@@ -24,12 +24,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -83,7 +83,7 @@
                         <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-nav-bar">
                             <div class="row align-item-center">
                                 <div class="col-md-4">
-                                    <h4 class="text-light text-uppercase mb-0 py-2">Our FInances</h4>
+                                    <h4 class="text-light text-uppercase mb-0 py-2">Our Finances</h4>
                                 </div>
                                 <div class="col-md-5">
                                     <form action="">
@@ -333,13 +333,8 @@
                                                     <span>&laquo;</span>
                                                 </a>
                                             </li>
-                                            <li class="page-item">
-                                                <a href="#" class="page-link py-2 px-3">1</a>
-                                            </li>
                                             <li class="page-item active">
-                                                <a href="#" class="page-link py-2 px-3">2</a>
-                                            </li><li class="page-item">
-                                                <a href="#" class="page-link py-2 px-3">3</a>
+                                                <a href="#" class="page-link py-2 px-3">1</a>
                                             </li>
                                             <li class="page-item">
                                                 <a href="#" class="page-link py-2 px-3">
