--- a/Admin/adminProjectDetails.html
+++ b/Admin/adminProjectDetails.html
@@ -25,12 +25,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -276,7 +276,7 @@
                                     <!--Target Amount and TImeline card-->
                                     <div class="card mb-3">
                                         <div class="card-body">
-                                            <h4 class="text-secondary">Target Amount: <span>KES 50,000</span></h4>
+                                            <h4 class="text-secondary">Target Amount: KES <span>50,000</span></h4>
                                             <hr>
                                             <h4 class="text-secondary">Start Date: <span>20th May 2020</span></h4>
                                             <h4 class="text-secondary">End Date: <span>10th September 2020</span></h4>
