--- a/Admin/adminProjects.html
+++ b/Admin/adminProjects.html
@@ -7,6 +7,7 @@
         <script src="https://kit.fontawesome.com/bd3ff9c68f.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/adminstyle.css">
+        <link rel="stylesheet" href="css/datedropper.css">
         <title>Admin Dashboard</title>
     </head>
 
@@ -24,12 +25,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -83,7 +84,7 @@
                         <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-nav-bar">
                             <div class="row align-item-center">
                                 <div class="col-md-4">
-                                    <h4 class="text-light text-uppercase mb-0 py-2">Our FInances</h4>
+                                    <h4 class="text-light text-uppercase mb-0 py-2">Our Finances</h4>
                                 </div>
                                 <div class="col-md-5">
                                     <form action="">
@@ -289,16 +290,16 @@
                                                     <input type="number" class="form-control" id="targetAmount" placeholder="Target Amount" required>
                                                 </div>
 
-                                                <div class="form-group text-secondary">
-                                                    <label for="startDate">Start Date</label>
+                                                <div class="form-group">
+                                                    <label for="date-input1" class="text-muted"> Start Date</label>
                                                     <br>
-                                                    <input type="date" class="form-control" id="startDate" placeholder="Start Date" required>
+                                                    <input type="text" id="date-input1" class="form-control eventName " data-large-mode="true" data-large-default="true" data-lock="from" data-theme="leaf" required>
                                                 </div>
 
-                                                <div class="form-group text-secondary">
-                                                    <label for="endDate">End Date</label>
+                                                <div class="form-group">
+                                                    <label for="date-input2" class="text-muted"> End Date</label>
                                                     <br>
-                                                    <input type="date" class="form-control" id="endDate" placeholder="End Date" required>
+                                                    <input type="text" id="date-input2" class="form-control eventName " data-large-mode="true" data-large-default="true" data-lock="from" data-theme="leaf" required>
                                                 </div>
 
                                                 <button type="submit" class="btn btn-success">Add Project</button>
@@ -322,12 +323,17 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/animation.js" type="text/javascript"></script>
+    <script src="js/datedropper.js"></script>
+    <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
     <script>
         $(".progress").each(function(index, progress){
                 var progressBar = $(progress).find(".progress-bar");
                 var progressPercent = parseInt($(progressBar).attr("data-progress"));
                 $(progressBar).css("width",progressPercent+"%").text(progressPercent+"%");
             });
+
+        $('#date-input1').dateDropper();
+        $('#date-input2').dateDropper();
     </script>
     <script type="text/javascript" src="js/functionality.js"></script>
     <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
