--- a/Admin/adminlogin.html
+++ b/Admin/adminlogin.html
@@ -5,18 +5,18 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
         <script src="https://kit.fontawesome.com/bd3ff9c68f.js" crossorigin="anonymous"></script>
     </head>
     <body id="admin">
         <div class="section-22">
             <div class="modal-dialog text-center" data-aos="fade">
                 <div class="col-sm-9 main-section">
-                    <img src="images/ksflogo.png" alt="KSF logo" class="logo">
+                    <img src="../images/ksflogo.png" alt="KSF logo" class="logo">
                     <div class="modal-content">
     
                         <div class="col-12 user-img">
-                            <img src="images/face.png" alt="image">
+                            <img src="../images/face.png" alt="image">
                         </div>
     
                         <div class="col-12 form-input">
