--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,8 @@
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -69,6 +71,10 @@
                                     </div>
     
                                     <button type="submit" class="btn btn-success mb-5">Submit</button>
+
+                                    <div id="comments-container"></div>
+
+                                    <div id="my-comment" style="width:800px;height:200px;"></div>
                                 </form>
                             </article>
                         </div>
@@ -132,30 +138,7 @@
             </div>
         </main>
 
-        <footer>
-            <div class="section-8 text-center" data-aos="fade">
-                <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
-                <h6 class="my-4">Go ahead of the curve</h6>
-
-                <div class="form-inline justify-content-center">
-                    <input type="text" value="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2">
-                    <input type="button" value="Subscribe" class="btn px-4 py-2">
-                </div>
-
-                <div class="social" style="margin: 5%;">
-                    <div class="d-flex flex-row justify-content-center">
-                        <a href="https://www.facebook.com/KenyaScoliosisFoundation/?referrer=whatsapp">
-                            <i class="fab fa-facebook-f m-2"></i>
-                        </a>
-                        <a href="https://twitter.com/ScoliosisKenya?s=08">
-                            <i class="fab fa-twitter m-2"></i>
-                        </a>
-                    </div>
-                </div>
-                <hr>
-                <h5 id="copyright">&copy;2020 by Kenya Scoliosis Foundation</h5>
-            </div>
-        </footer>
+        <div id="footer"></div>
     </body>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -163,11 +146,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
+    <script src="js/functionality.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    
     <script>
         $(function(){
-            $('#navbarDiv').load( 'Navigation.html' );
+            $('#navbarDiv').load( 'Navigation.html');
+            $('#footer').load('footer.html');
         });
 
         AOS.init({
